[gd_scene load_steps=31 format=2]

[ext_resource path="res://addons/character_controller/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/character_controller/Levels/Main/Geometry/Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/character_controller/Levels/Main/Environment.tres" type="Environment" id=3]
[ext_resource path="res://addons/character_controller/Levels/Main/L_Main.gd" type="Script" id=4]
[ext_resource path="res://addons/character_controller/Levels/Main/Geometry/Wall.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/images/grass2.png" type="Texture" id=6]
[ext_resource path="res://features/flower_character/flower_character.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/images/grassText.png" type="Texture" id=9]
[ext_resource path="res://assets/images/rose.png" type="Texture" id=10]
[ext_resource path="res://assets/images/sunflower.png" type="Texture" id=11]
[ext_resource path="res://assets/images/nightshade.png" type="Texture" id=12]
[ext_resource path="res://assets/images/poppy.png" type="Texture" id=13]
[ext_resource path="res://assets/images/tulip.png" type="Texture" id=14]
[ext_resource path="res://assets/images/well.png" type="Texture" id=15]
[ext_resource path="res://assets/images/watering_can.png" type="Texture" id=16]
[ext_resource path="res://features/flower_character/water_can.gd" type="Script" id=17]
[ext_resource path="res://features/time_manager/TimeManager.tscn" type="PackedScene" id=18]
[ext_resource path="res://features/dialog_system/dialog_system.tscn" type="PackedScene" id=19]
[ext_resource path="res://assets/images/hedge.png" type="Texture" id=20]
[ext_resource path="res://assets/images/house.png" type="Texture" id=21]

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1.69785, 1.35048, 0.494939 )

[sub_resource type="PlaneMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = ExtResource( 9 )

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0 )

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0 )

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0 )

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0 )
albedo_texture = ExtResource( 20 )
uv1_scale = Vector3( 3, 2, 1 )
uv2_scale = Vector3( 3, 2, 1 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2.67025, 1, 1 )

[sub_resource type="CapsuleShape" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.717102, 1, 0.851346 )

[node name="L_Main" type="Spatial"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="Spatial" type="Spatial" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.29832e-06, 0.0103648, -0.000842571 )

[node name="water_can" type="Spatial" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.09807, 0.00627375, -0.00327158 )
script = ExtResource( 17 )

[node name="CanSprite" type="Sprite3D" parent="Player/water_can"]
transform = Transform( 0.144273, 0, 0, 0, 0.144273, 0, 0, 0, -0.455551, 6.46109, 0.132571, -0.587582 )
billboard = 1
texture = ExtResource( 16 )

[node name="Area" type="Area" parent="Player/water_can"]
transform = Transform( 0.144273, 0, 0, 0, 0.144273, 0, 0, 0, -0.455551, 6.67671, 0.58053, -0.958136 )

[node name="CollisionShape" type="CollisionShape" parent="Player/water_can/Area"]
transform = Transform( 1.26557, 0, 0, 0, 1.37663, 0, 0, 0, 1.37663, 0, 0, 0 )
shape = SubResource( 4 )

[node name="ArenaGeometry" type="Spatial" parent="."]

[node name="Floor1" parent="ArenaGeometry" instance=ExtResource( 2 )]
transform = Transform( 20, 0, 0, 0, 1, 0, 0, 0, 20, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Wall1" parent="ArenaGeometry" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.75, -20 )
material/0 = SubResource( 8 )

[node name="hedge2" type="Sprite3D" parent="ArenaGeometry/Wall1"]
transform = Transform( 2.075, 0, -2.37762e-08, 0, 0.273, 0, 4.93355e-08, 0, 1, 0.5929, -3.3866, -0.036644 )
texture = ExtResource( 20 )

[node name="Wall2" parent="ArenaGeometry" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.75, 20 )
material/0 = SubResource( 9 )

[node name="hedge2" type="Sprite3D" parent="ArenaGeometry/Wall2"]
transform = Transform( 2.075, 0, -2.37762e-08, 0, 0.273, 0, 4.93355e-08, 0, 1, 0.169561, -3.3866, -0.036644 )
texture = ExtResource( 20 )

[node name="Wall3" parent="ArenaGeometry" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 20, 5.75, 0 )
material/0 = SubResource( 10 )

[node name="hedge2" type="Sprite3D" parent="ArenaGeometry/Wall3"]
transform = Transform( 2.075, 0, -2.37762e-08, 0, 0.273, 0, 4.93355e-08, 0, 1, -0.238333, -3.3866, -0.036644 )
texture = ExtResource( 20 )

[node name="house" type="Sprite3D" parent="ArenaGeometry/Wall3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.54839e-09, 0, -0.0811825 )
layers = 3
render_priority = 2
texture = ExtResource( 21 )

[node name="Wall4" parent="ArenaGeometry" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 0.272942, 0, -1, 0, -4.37114e-08, -20.0066, 2.3634, -0.014925 )
material/0 = SubResource( 7 )

[node name="hedge" type="Sprite3D" parent="ArenaGeometry/Wall4"]
transform = Transform( 2.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000236368, 0, 0.546 )
texture = ExtResource( 20 )

[node name="Lighting" type="Node" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Lighting"]
environment = ExtResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="Lighting"]
transform = Transform( 1, 0, 0, 0, 0.0976002, 0.995226, 0, -0.995226, 0.0976002, 0, 10.031, 0 )
light_energy = 3.569
shadow_enabled = true
shadow_bias = 0.05
directional_shadow_max_distance = 250.0

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1.65151, 0, 0, 0, 1, 0.839161, 2.11644, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.11644, 0 )
shape = SubResource( 2 )

[node name="Flowers" type="Node" parent="."]

[node name="Rose" parent="Flowers" instance=ExtResource( 7 )]
process_priority = 1
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.06, -0.0879298, 14.8852 )
character_name = "Rose"
texture = ExtResource( 10 )

[node name="BellaAndDonna" parent="Flowers" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16.9816, -0.0879298, -0.165431 )
character_name = "Bella & Donna"
texture = ExtResource( 12 )

[node name="Poppy" parent="Flowers" instance=ExtResource( 7 )]
process_priority = 1
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.06178, -0.0879298, 17.3394 )
character_name = "Poppy"
texture = ExtResource( 13 )

[node name="Sunflower" parent="Flowers" instance=ExtResource( 7 )]
process_priority = 1
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15.7845, -0.0879298, -16.2245 )
character_name = "Sunflower"
texture = ExtResource( 11 )

[node name="Tulip" parent="Flowers" instance=ExtResource( 7 )]
process_priority = 1
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.4654, -0.0879298, -16.5264 )
character_name = "Tulip"
texture = ExtResource( 14 )

[node name="DialogSystem" parent="." instance=ExtResource( 19 )]

[node name="well" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.11969, -2.48223, -0.28888 )

[node name="Sprite3D" type="Sprite3D" parent="well"]
transform = Transform( 0.198302, 0, 0, 0, 0.198302, 0, 0, 0, 0.963727, -5.52153, 4.07842, -0.859899 )
billboard = 2
render_priority = 2
texture = ExtResource( 15 )

[node name="CollisionShape" type="CollisionShape" parent="well"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.63118, 3.90584, -0.746861 )
shape = SubResource( 3 )

[node name="TimeManager" parent="." instance=ExtResource( 18 )]

[node name="GrassSprites" type="Spatial" parent="."]

[node name="Grass" type="Spatial" parent="GrassSprites"]

[node name="GrassPlant" type="Spatial" parent="GrassSprites/Grass"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.39971, 0, 0 )

[node name="Sprite3D" type="Sprite3D" parent="GrassSprites/Grass/GrassPlant"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223409, 2.59965, -0.0180761 )
texture = ExtResource( 6 )

[node name="Sprite3D3" type="Sprite3D" parent="GrassSprites/Grass/GrassPlant"]
transform = Transform( -0.0707107, 0, 0.707107, 0, 1, 0, -0.0707107, 0, -0.707107, -0.07, 2.6, 0.087 )
texture = ExtResource( 6 )

[node name="Sprite3D4" type="Sprite3D" parent="GrassSprites/Grass/GrassPlant"]
transform = Transform( -0.0707107, 0, -0.707107, 0, 1, 0, 0.0707107, 0, -0.707107, 0.124, 2.6, 0.09 )
texture = ExtResource( 6 )

[node name="Grass9" type="Spatial" parent="GrassSprites"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.1982, 0, 12.1309 )

[node name="GrassPlant" type="Spatial" parent="GrassSprites/Grass9"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.39971, 0, 0 )

[node name="Sprite3D" type="Sprite3D" parent="GrassSprites/Grass9/GrassPlant"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223409, 2.59965, -0.0180761 )
texture = ExtResource( 6 )

[node name="Sprite3D3" type="Sprite3D" parent="GrassSprites/Grass9/GrassPlant"]
transform = Transform( -0.0707107, 0, 0.707107, 0, 1, 0, -0.0707107, 0, -0.707107, -0.07, 2.6, 0.087 )
texture = ExtResource( 6 )

[node name="Sprite3D4" type="Sprite3D" parent="GrassSprites/Grass9/GrassPlant"]
transform = Transform( -0.0707107, 0, -0.707107, 0, 1, 0, 0.0707107, 0, -0.707107, 0.124, 2.6, 0.09 )
texture = ExtResource( 6 )

[node name="Grass10" type="Spatial" parent="GrassSprites"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.1982, 0, -16.9308 )

[node name="GrassPlant" type="Spatial" parent="GrassSprites/Grass10"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.39971, 0, 0 )

[node name="Sprite3D" type="Sprite3D" parent="GrassSprites/Grass10/GrassPlant"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223409, 2.59965, -0.0180761 )
texture = ExtResource( 6 )

[node name="Sprite3D3" type="Sprite3D" parent="GrassSprites/Grass10/GrassPlant"]
transform = Transform( -0.0707107, 0, 0.707107, 0, 1, 0, -0.0707107, 0, -0.707107, -0.07, 2.6, 0.087 )
texture = ExtResource( 6 )

[node name="Sprite3D4" type="Sprite3D" parent="GrassSprites/Grass10/GrassPlant"]
transform = Transform( -0.0707107, 0, -0.707107, 0, 1, 0, 0.0707107, 0, -0.707107, 0.124, 2.6, 0.09 )
texture = ExtResource( 6 )

[node name="Grass11" type="Spatial" parent="GrassSprites"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.36913, 0, -16.9308 )

[node name="GrassPlant" type="Spatial" parent="GrassSprites/Grass11"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.39971, 0, 0 )

[node name="Sprite3D" type="Sprite3D" parent="GrassSprites/Grass11/GrassPlant"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223409, 2.59965, -0.0180761 )
texture = ExtResource( 6 )

[node name="Sprite3D3" type="Sprite3D" parent="GrassSprites/Grass11/GrassPlant"]
transform = Transform( -0.0707107, 0, 0.707107, 0, 1, 0, -0.0707107, 0, -0.707107, -0.07, 2.6, 0.087 )
texture = ExtResource( 6 )

[node name="Sprite3D4" type="Sprite3D" parent="GrassSprites/Grass11/GrassPlant"]
transform = Transform( -0.0707107, 0, -0.707107, 0, 1, 0, 0.0707107, 0, -0.707107, 0.124, 2.6, 0.09 )
texture = ExtResource( 6 )

[node name="Grass12" type="Spatial" parent="GrassSprites"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.08102, 0, -4.40334 )

[node name="GrassPlant" type="Spatial" parent="GrassSprites/Grass12"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.39971, 0, 0 )

[node name="Sprite3D" type="Sprite3D" parent="GrassSprites/Grass12/GrassPlant"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223409, 2.59965, -0.0180761 )
texture = ExtResource( 6 )

[node name="Sprite3D3" type="Sprite3D" parent="GrassSprites/Grass12/GrassPlant"]
transform = Transform( -0.0707107, 0, 0.707107, 0, 1, 0, -0.0707107, 0, -0.707107, -0.07, 2.6, 0.087 )
texture = ExtResource( 6 )

[node name="Sprite3D4" type="Sprite3D" parent="GrassSprites/Grass12/GrassPlant"]
transform = Transform( -0.0707107, 0, -0.707107, 0, 1, 0, 0.0707107, 0, -0.707107, 0.124, 2.6, 0.09 )
texture = ExtResource( 6 )

[node name="Grass13" type="Spatial" parent="GrassSprites"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.38571, 0, 2.38744 )

[node name="GrassPlant" type="Spatial" parent="GrassSprites/Grass13"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.39971, 0, 0 )

[node name="Sprite3D" type="Sprite3D" parent="GrassSprites/Grass13/GrassPlant"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223409, 2.59965, -0.0180761 )
texture = ExtResource( 6 )

[node name="Sprite3D3" type="Sprite3D" parent="GrassSprites/Grass13/GrassPlant"]
transform = Transform( -0.0707107, 0, 0.707107, 0, 1, 0, -0.0707107, 0, -0.707107, -0.07, 2.6, 0.087 )
texture = ExtResource( 6 )

[node name="Sprite3D4" type="Sprite3D" parent="GrassSprites/Grass13/GrassPlant"]
transform = Transform( -0.0707107, 0, -0.707107, 0, 1, 0, 0.0707107, 0, -0.707107, 0.124, 2.6, 0.09 )
texture = ExtResource( 6 )

[node name="Grass14" type="Spatial" parent="GrassSprites"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.69343, 0, -5.8418 )

[node name="GrassPlant" type="Spatial" parent="GrassSprites/Grass14"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.39971, 0, 0 )

[node name="Sprite3D" type="Sprite3D" parent="GrassSprites/Grass14/GrassPlant"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223409, 2.59965, -0.0180761 )
texture = ExtResource( 6 )

[node name="Sprite3D3" type="Sprite3D" parent="GrassSprites/Grass14/GrassPlant"]
transform = Transform( -0.0707107, 0, 0.707107, 0, 1, 0, -0.0707107, 0, -0.707107, -0.07, 2.6, 0.087 )
texture = ExtResource( 6 )

[node name="Sprite3D4" type="Sprite3D" parent="GrassSprites/Grass14/GrassPlant"]
transform = Transform( -0.0707107, 0, -0.707107, 0, 1, 0, 0.0707107, 0, -0.707107, 0.124, 2.6, 0.09 )
texture = ExtResource( 6 )

[node name="Grass15" type="Spatial" parent="GrassSprites"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.07896, 0, 3.49718 )

[node name="GrassPlant" type="Spatial" parent="GrassSprites/Grass15"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.39971, 0, 0 )

[node name="Sprite3D" type="Sprite3D" parent="GrassSprites/Grass15/GrassPlant"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223409, 2.59965, -0.0180761 )
texture = ExtResource( 6 )

[node name="Sprite3D3" type="Sprite3D" parent="GrassSprites/Grass15/GrassPlant"]
transform = Transform( -0.0707107, 0, 0.707107, 0, 1, 0, -0.0707107, 0, -0.707107, -0.07, 2.6, 0.087 )
texture = ExtResource( 6 )

[node name="Sprite3D4" type="Sprite3D" parent="GrassSprites/Grass15/GrassPlant"]
transform = Transform( -0.0707107, 0, -0.707107, 0, 1, 0, 0.0707107, 0, -0.707107, 0.124, 2.6, 0.09 )
texture = ExtResource( 6 )

[node name="Grass16" type="Spatial" parent="GrassSprites"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.4481, 0, 12.3917 )

[node name="GrassPlant" type="Spatial" parent="GrassSprites/Grass16"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.39971, 0, 0 )

[node name="Sprite3D" type="Sprite3D" parent="GrassSprites/Grass16/GrassPlant"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223409, 2.59965, -0.0180761 )
texture = ExtResource( 6 )

[node name="Sprite3D3" type="Sprite3D" parent="GrassSprites/Grass16/GrassPlant"]
transform = Transform( -0.0707107, 0, 0.707107, 0, 1, 0, -0.0707107, 0, -0.707107, -0.07, 2.6, 0.087 )
texture = ExtResource( 6 )

[node name="Sprite3D4" type="Sprite3D" parent="GrassSprites/Grass16/GrassPlant"]
transform = Transform( -0.0707107, 0, -0.707107, 0, 1, 0, 0.0707107, 0, -0.707107, 0.124, 2.6, 0.09 )
texture = ExtResource( 6 )

[node name="Grass2" type="Spatial" parent="GrassSprites"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.65735 )

[node name="GrassPlant" type="Spatial" parent="GrassSprites/Grass2"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.39971, 0, 0 )

[node name="Sprite3D" type="Sprite3D" parent="GrassSprites/Grass2/GrassPlant"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223409, 2.59965, -0.0180761 )
texture = ExtResource( 6 )

[node name="Sprite3D3" type="Sprite3D" parent="GrassSprites/Grass2/GrassPlant"]
transform = Transform( -0.0707107, 0, 0.707107, 0, 1, 0, -0.0707107, 0, -0.707107, -0.07, 2.6, 0.087 )
texture = ExtResource( 6 )

[node name="Sprite3D4" type="Sprite3D" parent="GrassSprites/Grass2/GrassPlant"]
transform = Transform( -0.0707107, 0, -0.707107, 0, 1, 0, 0.0707107, 0, -0.707107, 0.124, 2.6, 0.09 )
texture = ExtResource( 6 )

[node name="Grass3" type="Spatial" parent="GrassSprites"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.65735 )

[node name="GrassPlant" type="Spatial" parent="GrassSprites/Grass3"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, -11.3483, 0, -4.52704 )

[node name="Sprite3D" type="Sprite3D" parent="GrassSprites/Grass3/GrassPlant"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223409, 2.59965, -0.0180761 )
texture = ExtResource( 6 )

[node name="Sprite3D3" type="Sprite3D" parent="GrassSprites/Grass3/GrassPlant"]
transform = Transform( -0.0707107, 0, 0.707107, 0, 1, 0, -0.0707107, 0, -0.707107, -0.07, 2.6, 0.087 )
texture = ExtResource( 6 )

[node name="Sprite3D4" type="Sprite3D" parent="GrassSprites/Grass3/GrassPlant"]
transform = Transform( -0.0707107, 0, -0.707107, 0, 1, 0, 0.0707107, 0, -0.707107, 0.124, 2.6, 0.09 )
texture = ExtResource( 6 )

[node name="Grass5" type="Spatial" parent="GrassSprites"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.02331 )

[node name="GrassPlant" type="Spatial" parent="GrassSprites/Grass5"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, -11.3483, 0, -4.52704 )

[node name="Sprite3D" type="Sprite3D" parent="GrassSprites/Grass5/GrassPlant"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223409, 2.59965, -0.0180761 )
texture = ExtResource( 6 )

[node name="Sprite3D3" type="Sprite3D" parent="GrassSprites/Grass5/GrassPlant"]
transform = Transform( -0.0707107, 0, 0.707107, 0, 1, 0, -0.0707107, 0, -0.707107, -0.07, 2.6, 0.087 )
texture = ExtResource( 6 )

[node name="Sprite3D4" type="Sprite3D" parent="GrassSprites/Grass5/GrassPlant"]
transform = Transform( -0.0707107, 0, -0.707107, 0, 1, 0, 0.0707107, 0, -0.707107, 0.124, 2.6, 0.09 )
texture = ExtResource( 6 )

[node name="Grass6" type="Spatial" parent="GrassSprites"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20.2963, 0, -5.02331 )

[node name="GrassPlant" type="Spatial" parent="GrassSprites/Grass6"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, -11.3483, 0, -4.52704 )

[node name="Sprite3D" type="Sprite3D" parent="GrassSprites/Grass6/GrassPlant"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223409, 2.59965, -0.0180761 )
texture = ExtResource( 6 )

[node name="Sprite3D3" type="Sprite3D" parent="GrassSprites/Grass6/GrassPlant"]
transform = Transform( -0.0707107, 0, 0.707107, 0, 1, 0, -0.0707107, 0, -0.707107, -0.07, 2.6, 0.087 )
texture = ExtResource( 6 )

[node name="Sprite3D4" type="Sprite3D" parent="GrassSprites/Grass6/GrassPlant"]
transform = Transform( -0.0707107, 0, -0.707107, 0, 1, 0, 0.0707107, 0, -0.707107, 0.124, 2.6, 0.09 )
texture = ExtResource( 6 )

[node name="Grass7" type="Spatial" parent="GrassSprites"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20.2963, 0, 14.5185 )

[node name="GrassPlant" type="Spatial" parent="GrassSprites/Grass7"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, -11.3483, 0, -4.52704 )

[node name="Sprite3D" type="Sprite3D" parent="GrassSprites/Grass7/GrassPlant"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223409, 2.59965, -0.0180761 )
texture = ExtResource( 6 )

[node name="Sprite3D3" type="Sprite3D" parent="GrassSprites/Grass7/GrassPlant"]
transform = Transform( -0.0707107, 0, 0.707107, 0, 1, 0, -0.0707107, 0, -0.707107, -0.07, 2.6, 0.087 )
texture = ExtResource( 6 )

[node name="Sprite3D4" type="Sprite3D" parent="GrassSprites/Grass7/GrassPlant"]
transform = Transform( -0.0707107, 0, -0.707107, 0, 1, 0, 0.0707107, 0, -0.707107, 0.124, 2.6, 0.09 )
texture = ExtResource( 6 )

[node name="Grass8" type="Spatial" parent="GrassSprites"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.3189, 0, 1.72527 )

[node name="GrassPlant" type="Spatial" parent="GrassSprites/Grass8"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, -11.3483, 0, -4.52704 )

[node name="Sprite3D" type="Sprite3D" parent="GrassSprites/Grass8/GrassPlant"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223409, 2.59965, -0.0180761 )
texture = ExtResource( 6 )

[node name="Sprite3D3" type="Sprite3D" parent="GrassSprites/Grass8/GrassPlant"]
transform = Transform( -0.0707107, 0, 0.707107, 0, 1, 0, -0.0707107, 0, -0.707107, -0.07, 2.6, 0.087 )
texture = ExtResource( 6 )

[node name="Sprite3D4" type="Sprite3D" parent="GrassSprites/Grass8/GrassPlant"]
transform = Transform( -0.0707107, 0, -0.707107, 0, 1, 0, 0.0707107, 0, -0.707107, 0.124, 2.6, 0.09 )
texture = ExtResource( 6 )

[node name="Grass4" type="Spatial" parent="GrassSprites"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10.2905 )

[node name="GrassPlant" type="Spatial" parent="GrassSprites/Grass4"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.39971, 0, 0 )

[node name="Sprite3D" type="Sprite3D" parent="GrassSprites/Grass4/GrassPlant"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223409, 2.59965, -0.0180761 )
texture = ExtResource( 6 )

[node name="Sprite3D3" type="Sprite3D" parent="GrassSprites/Grass4/GrassPlant"]
transform = Transform( -0.0707107, 0, 0.707107, 0, 1, 0, -0.0707107, 0, -0.707107, -0.07, 2.6, 0.087 )
texture = ExtResource( 6 )

[node name="Sprite3D4" type="Sprite3D" parent="GrassSprites/Grass4/GrassPlant"]
transform = Transform( -0.0707107, 0, -0.707107, 0, 1, 0, 0.0707107, 0, -0.707107, 0.124, 2.6, 0.09 )
texture = ExtResource( 6 )

[connection signal="body_entered" from="Player/water_can/Area" to="Player/water_can" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Player/water_can/Area" to="Player/water_can" method="_on_Area_body_exited"]
